--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.x"
+    "node": "17.2.0"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
