--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "engines": {
     "node": "17.2.0"
   },
